feat: adiciona formulario de cadastro

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 <body>
 
     <button>contato</button>
+    <h1>cadastro</h1>
+
+    <form action="">
+        <label for="email">Email</label>
+        <input type="text" id = "email" name = "email">
+        <label for="password"> password</label>
+        <input type="password"id = "password" name="password">
+        <button>registrar</button>
+    </form>
+    
+    
 
 </body>
 
